RESOLVED FIXED221094
[macOS] Regression(r271897) Prewarmed WebProcesses no longer get a user-friendly process name in Activity Monitor
https://bugs.webkit.org/show_bug.cgi?id=221094
Summary [macOS] Regression(r271897) Prewarmed WebProcesses no longer get a user-frien...
Chris Dumez
Reported 2021-01-28 10:39:13 PST
WebProcess::updateProcessName should initiate network process connection if none exists, instead of giving up and returning early in this case. Same policy applies to WebProcess::updateActivePages.
Attachments
Patch (4.36 KB, patch)
2021-01-28 10:42 PST, Chris Dumez
no flags
Patch (11.29 KB, patch)
2021-02-01 15:11 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-01-28 10:39:26 PST
Chris Dumez
Comment 2 2021-01-28 10:42:24 PST
Per Arne Vollan
Comment 3 2021-01-28 10:47:19 PST
Comment on attachment 418656 [details] Patch R=me. Thanks!
EWS
Comment 4 2021-01-28 11:42:05 PST
Committed r272020: <https://trac.webkit.org/changeset/272020> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418656 [details].
Chris Dumez
Comment 5 2021-01-28 13:58:21 PST
WebKit Commit Bot
Comment 6 2021-01-29 11:12:52 PST
Re-opened since this is blocked by bug 221144
Chris Dumez
Comment 7 2021-02-01 13:59:45 PST
Comment on attachment 418656 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418656&action=review > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:467 > + ensureNetworkProcessConnection().send(Messages::NetworkConnectionToWebProcess::UpdateActivePages(displayName, Vector<String>(), auditToken), 0); Looks like the issue is that for we need a sessionID to initiate the connection to the network process. Prewarmed WebProcesses don't get a sessionID until after they're used by an actual page. This seems to indicate that the current design (having the network process set the WebProcess name) is not currently compatible with prewarmed WebProcesses.. One way to address this may be to allow initiating a connection to the networkProcess without a sessionID and allow the sessionID to be set later on.
Chris Dumez
Comment 8 2021-02-01 15:11:50 PST
Per Arne Vollan
Comment 9 2021-02-02 06:02:33 PST
Comment on attachment 418933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=418933&action=review Thanks! R=me. > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:482 > + ensureNetworkProcessConnection().connection().send(Messages::NetworkConnectionToWebProcess::UpdateActivePages(displayName, Vector<String>(), auditToken), 0); Is it sufficient to only call ensureNetworkProcessConnection().send here? > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:769 > + ensureNetworkProcessConnection().connection().send(Messages::NetworkConnectionToWebProcess::UpdateActivePages(overrideDisplayName, activePagesOrigins(m_pageMap), auditToken), 0); Ditto.
Chris Dumez
Comment 10 2021-02-02 08:26:14 PST
(In reply to Per Arne Vollan from comment #9) > Comment on attachment 418933 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=418933&action=review > > Thanks! R=me. > > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:482 > > + ensureNetworkProcessConnection().connection().send(Messages::NetworkConnectionToWebProcess::UpdateActivePages(displayName, Vector<String>(), auditToken), 0); > > Is it sufficient to only call ensureNetworkProcessConnection().send here? > > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:769 > > + ensureNetworkProcessConnection().connection().send(Messages::NetworkConnectionToWebProcess::UpdateActivePages(overrideDisplayName, activePagesOrigins(m_pageMap), auditToken), 0); > > Ditto. No, NetworkProcessConnection has no send() message and does not subclass IPC::MessageSender currently.
EWS
Comment 11 2021-02-02 08:31:16 PST
Committed r272209: <https://trac.webkit.org/changeset/272209> All reviewed patches have been landed. Closing bug and clearing flags on attachment 418933 [details].
Note You need to log in before you can comment on or make changes to this bug.