[macOS] WebProcess::updateProcessName should initiate network process connection if none exists https://bugs.webkit.org/show_bug.cgi?id=221094 <rdar://73658122>

Reviewed by Per Arne Vollan.

WebProcess::updateProcessName should initiate network process connection if none exists, instead of giving up
and returning early in this case. Same policy applies to WebProcess::updateActivePages.

This is a follow-up to:
https://trac.webkit.org/changeset/271897/webkit

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::updateProcessName):
(WebKit::WebProcess::updateActivePages):


Canonical link: https://commits.webkit.org/233445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272020 268f45cc-cd09-0410-ab3c-d52691b4dbfc